examples/test/testpolicy18856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18856
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key32: value13
      key36: value35
      key22: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value45
          key39: value13
      podSelector:
        matchLabels:
          key34: value32
          key43: value23
          key6: value0
